Refs #27615 Copernicus; Fixed leaf page title align for export pdf.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/print.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/print.css
@@ -158,6 +158,10 @@ body .map .container {
 
 
 /* added for eea.pdf export */
+#parent-fieldname-title {
+	text-align: left;
+}
+
 #viewlet-below-content {
     display: none; /* hide comments form */
 }
